tests/snapshots/declared_snapshots__agent_table_declared_mux_relationship.snap
---
source: tests/declared_snapshots.rs
expression: table
---
ID         AGENT            CWD    MUX          MUX/CONF  PR  PR/CONF  LINEAGE
---------  ---------------  -----  -----------  --------  --  -------  -------
session-x  codex:session-x  /work  tmux:editor  SD/H      —   —        —
